--- a/02/index.html
+++ b/02/index.html
@@ -159,5 +159,6 @@
 
 	// 03 - H2 Font size OK
 	$('.header__main h2').css('font-size', '2em');
+	//$('header__main').find('h2').css('font-size', '2em')
 </script>
 </html>
